[tool.poetry]
name = "implement"
version = "0.1.0"
description = ""
authors = ["Cenk Altı <cenkalti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
yapf = "^0.40.2"
openai = "^1.30.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
