[project]
name = "implement"
version = "0.1.0"
description = ""
authors = [{ name = "Cenk Altı", email = "cenkalti@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.7.1,<3",
    "yapf>=0.40.2,<0.41",
    "openai>=1.30.1,<2",
]

[dependency-groups]
dev = ["pytest>=8.2.1,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
