[project]
name = "implement"
version = "0.1.0"
description = ""
authors = [{ name = "Cenk Altı", email = "cenkalti@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.11.4",
    "yapf>=0.43.0",
    "openai>=1.79.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
